<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.justdoit.sharebook.activity.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/usernameTx"
        android:ems="10"
        android:id="@+id/usernameETx"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/textview_horizontal_margin"
        android:layout_marginTop="@dimen/textview_vertical_margin"
        android:layout_marginRight="@dimen/textview_horizontal_margin"
        android:layout_marginBottom="@dimen/textview_vertical_margin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwdETx"
        android:layout_below="@+id/usernameETx"
        android:layout_alignLeft="@+id/usernameETx"
        android:layout_alignStart="@+id/usernameETx"
        android:layout_alignRight="@+id/usernameETx"
        android:layout_alignEnd="@+id/usernameETx"
        android:text="@string/passwordTx" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTx"
        android:id="@+id/loginBtn"
        android:layout_below="@+id/passwdETx"
        android:layout_alignLeft="@+id/passwdETx"
        android:layout_alignStart="@+id/passwdETx" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registTx"
        android:id="@+id/registBtn"
        android:layout_below="@+id/passwdETx"
        android:layout_toRightOf="@+id/loginBtn"
        android:layout_toEndOf="@+id/loginBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="测试登录注册"
        android:id="@+id/testTv"
        android:layout_below="@+id/loginBtn"
        android:layout_alignLeft="@+id/loginBtn"
        android:layout_alignStart="@+id/loginBtn" />
</RelativeLayout>
